# datafusion

./: Cargo.toml
datafusion/functions/src/regex/: regexplike.rs
datafusion/functions/src/string/: contains.rs  ends_with.rs  levenshtein.rs  ltrim.rs  replace.rs  rtrim.rs  starts_with.rs  upper.rs
datafusion/functions/src/unicode/: initcap.rs  strpos.rs
reading/: Cargo.toml  draw_plan.sh
reading/src/: main.rs
